--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "is-svg": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
